# GameOfLife

./: CMakeLists.txt  gameOfLife_main.cpp
